closes #6 - Formas de pagamento
O sistema possibilita o cadastro das formas de pagamento aceitas na CEE
(dinheiro, cheque, cartão crédito, cartão débito, pic pay, etc). Cada
subsistema pode especializar estas formas de pagamento criando um
subconjunto destas, como por exemplo: dinheiro e cheque.

--- a/cee-admin_parent/cee-admin/src/main/resources/ApplicationResources_pt_BR.properties
+++ b/cee-admin_parent/cee-admin/src/main/resources/ApplicationResources_pt_BR.properties
@@ -321,3 +321,9 @@ usuario.titulo.detalhe=Pap\u00E9is
 usuario.detalhe.pag.titulo.comp=papelUsuario
 label.papel=Papel
 usuario.detalhe.titulo.comp=papelUsuario
+
+# Mensagens para action: formapagto
+formapagto.titulo=Forma Pagamento
+formapagto.titulo.sel=Forma Pagamento
+menu.formapagto.titulo=Forma Pagamento
+
