Pequenos ajustes visuais
Imagem botão logout, etc

--- a/cee-admin_parent/cee-admin/src/main/resources/ApplicationResources_pt_BR.properties
+++ b/cee-admin_parent/cee-admin/src/main/resources/ApplicationResources_pt_BR.properties
@@ -130,7 +130,7 @@ label.arquivo.anexado=Arquivo Anexado
 label.bemvindo=Bem-vindo
 label.cnpj=CNPJ
 label.codigo=C\u00F3digo
-label.sexo=Sexo
+label.sexo=Genero
 label.cpf=CPF
 label.data.fim.ddmmaaaa=Data Final(dd/mm/aaaa)
 label.data.fim.mmaaaa=Data Final(mm/aaaa)
@@ -253,7 +253,7 @@ menu.papel.titulo=Papel
 
 
 ajuda.cpf=Cpf
-ajuda.sexo=Sexo
+ajuda.sexo=Genero da pessoa
 ajuda.dataNascimento=Data Nascimento
 ajuda.email=Email
 ajuda.telefone=Telefone
