Cadastro de pessoas
Ajuste na pesquisa incluindo filtro por CPF
Ajuste na mensage de tratamento de duplicidade de CPF

--- a/cee-admin_parent/cee-admin/src/main/resources/ApplicationResources_pt_BR.properties
+++ b/cee-admin_parent/cee-admin/src/main/resources/ApplicationResources_pt_BR.properties
@@ -289,6 +289,7 @@ pessoa.titulo=Pessoa
 pessoa.titulo.sel=Pessoa
 menu.pessoa.titulo=Pessoa
 
+jcompany.aplicacao.PessoaEntity.naoDeveExistirCpfDuplicado=J\u00E1 existe uma outra pessoa com este mesmo CPF. Favor verificar!
 
 sexo.M=Masculino
 sexo.F=Feminino
